# backend-contratrix

./: .gitignore  dockerfile  pyproject.toml  requirements.txt
contratrix_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
contratrix_api/routers/: auth.py  checkout.py  clientes.py  contratos.py  cupons.py  metrics.py  planos.py  prestador.py  templates.py  transacoes.py  users.py  webhook.py
contratrix_api/utils/: email.py
migrations/: env.py
migrations/versions/: 1f2b691cd43d_ajuste_coluna_tabela_de_transações.py  2069aa9068b8_recriando_tabelas_no_banco.py  40ddd2a1387e_adicionado_coluna_template_html_na_.py  465953244d98_adicionado_coluna_template_html_na_.py  5c8ffd453c4f_adicionado_coluna_modo_na_tabela_de_.py  5d25f50c692e_removido_coluna_plano_da_tabela_users.py  6768bfc89a1b_cliente_id_pode_ser_null_na_tabela_de_.py  8249ce285266_ajuste_tabela_de_documentos.py  940b1fb2715d_ajuste_tabela_de_prestador.py  964015cd4c89_ajustes_colunas_tabela_user.py  977c2579e558_adicionado_coluna_modo_na_tabela_de_.py  9fc8f860812e_criação_das_novas_tabelas.py  a4e32f2caadb_adicionado_coluna_template_html_na_.py  afc6a4c89e43_alterado_o_tipo_da_coluna_template_na_.py  bfde75fb4276_adicionado_coluna_de_cupom_na_tabela_de_.py  d321dcb6e02b_ajuste_coluna_plano_id_tabela_users.py  e332d04c76e6_adicionado_coluna_template_html_na_.py
