[project]
name = "contratrix_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Messias",email = "lucasmessias98@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0" 
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "boto3 (>=1.38.27,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "weasyprint (>=66.0,<67.0)"
]


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev contratrix_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=contratrix_api -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
ruff = "^0.11.10"

